Improved Edit page (Added amount paid)
Implementation

forms.py: made TransactionForm(ModelForm) with desired fields

views.py: Changed update(request) to render TransactionForm on GET
and process it on POST

edit.html: Nested TransactionForm along with Tasks inside main Form

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -15,20 +15,20 @@
         <td>{{ transaction.service_description }} </td>
     </tr>
     <tr>
-        <td>Price</td>
-        <td>{{ transaction.price }} </td>
+        <td>Date Submitted</td>
+        <td>{{ transaction.date_submitted }}</td>
     </tr>
     <tr>
         <td>Completed</td>
         <td>{{ transaction.completed }}</td>
     </tr>
     <tr>
-        <td>Date Submitted</td>
-        <td>{{ transaction.date_submitted }}</td>
+        <td>Price</td>
+        <td>{{ transaction.price }} </td>
     </tr>
     <tr>
-        <td>Order Details</td>
-        <td>{{ transaction.service_description }} </td>
+        <td>Amount Paid</td>
+        <td>{{ transaction.amount_paid }} </td>
     </tr>
 
     {% if transaction.rental_bike %}
