--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -14,9 +14,13 @@
 
 {% load bootstrap_tags %}
 {% load repairs_form %}
+
+
+
 <form action="" method="post">
     {% csrf_token %}
 
+    {{ transaction_form | as_bootstrap}}
     {% for category_pair in category_dict.iteritems %}
         <div id = {{category_pair.0|join_whitespace}} style="display:none">
             <h3>{{ category_pair.0 }}</h3>
@@ -38,9 +42,10 @@
     {% endfor %}
     </div>
 
-
     <button type="submit" class="btn btn-default">Save</button>
     <button type="submit" name="cancel" class="btn btn-default">Cancel</button>
 </form>
+
+
 
 {% endblock %}
