Implemented Correct Back Button From Detail Page
Implementation:

1. We started in a parent page ('balance', 'index', or 'history')
2. We made a link to app:detail {% url app:detail transaction.id 'balance' %}
3. We passed this parent url to the detail page by rendering it from the detail view into the template in the back and \
edit links.
4. We relayed the parent url from the edit view into the edit page, so that the links for save and cancel would go back\
 to the detail page with the appropriate parent page in the url.

--- a/app/templates/app/balance.html
+++ b/app/templates/app/balance.html
@@ -20,7 +20,7 @@
     {% for update in revenue_updates %}
         <tr>
             {% if update.transaction != None %}
-                <td><a href="{% url 'app:detail_complete' update.transaction.id %}">{{ update.transaction.id }}</a></td>
+                <td><a href="{% url 'app:detail_complete' update.transaction.id 'balance' %}">{{ update.transaction.id }}</a></td>
             {% else %}
                 <td><a href="#">-</a></td>
             {% endif %}
