Corrected heading in /refurbished

--- a/app/templates/app/refurbished.html
+++ b/app/templates/app/refurbished.html
@@ -6,7 +6,7 @@
 <a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Back to Transactions</a>
 
 {% if refurbished_list %}
-    <h3>Rental Bikes</h3>
+    <h3>Refurbished Bikes</h3>
 
     <table class="table">
     <thead>
