Fixed incorrect backlink from detail to rental/refurbished
This is OK, but the preferred behavior would be to
go back to the rental_detail page, rather than the
rental page.
This requires a design change because detail_base.html
is currently rendered with just one "parent parameter".
Going back to rental detail requires two parameters:
rental_detail AND the RentalBike id.

Possible Fix:
-Tack the id on the end of the parent_url parameter in the link
from rental_detail, ie :8000/<transaction_id>/rental_detail_2. Then put logic in TransactionDetail parent_url to "<rental id>/rental_detail" for parent_url parameters with trailing id's. I.e. the back-link on the detail page would be :8000/2/rental_detail.

--- a/app/templates/app/rental_detail.html
+++ b/app/templates/app/rental_detail.html
@@ -9,7 +9,7 @@
     {% for transaction in transactions %}
         <tr>
             <td>{{ transaction.id }}</td>
-            <td><a href="{% url 'app:detail' transaction.id 'rental_detail' %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
+            <td><a href="{% url 'app:detail' transaction.id 'rental' %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
             <td>{{ transaction.email }}</td>
             <td>
                 {{ transaction.service_description|slice:":75" }}
