--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -13,6 +13,8 @@
     <script src="{% static 'js/bootstrap.min.js' %}"
             type="text/javascript"
             charset="utf-8" async defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+                              maximum-scale=1, user-scalable=0"/> <!--320-->
   </head>
     {% block head %}
     {% endblock %}
