--- a/app/templates/app/rental.html
+++ b/app/templates/app/rental.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<a href="{% url 'app:new_rental' %}" class="btn btn-default btn-xlarge" role="button" name='new_rental'>Add Rental Bike</a>
-<a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Back to Transactions</a>
+<a href="{% url 'app:new_rental' %}" class="btn btn-default btn-xlarge" role="button" name='new_rental'>Add Bike</a>
+<a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Transactions</a>
 
 {% if rentals %}
     <h3>Rental Bikes</h3>
