Fixed dropdown data rendering by move to Models
Moving choices to models still saves the same value, but supplying
a choices attribute to the model field enables Django to create
a get_<model_field>_display method to render the human-readable
choice in the template.

Also excluded the transaction field from the PartCategoryForm,
since this is automatically set to the transaction being created.

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -12,6 +12,10 @@
         <td>{{ transaction.email }}</td>
     </tr>
     <tr>
+        <td>Affiliation</td>
+        <td>{{ transaction.get_affiliation_display }}</td>
+    </tr>
+    <tr>
         <td>Service Description</td>
         <td>{{ transaction.service_description }} </td>
     </tr>
@@ -51,6 +55,13 @@
         <tr>
             <td>{{ task.name|place_whitespace }} </td>
             <td>{{ task.completed }}</td>
+        </tr>
+    {% endfor %}
+    {% for part_category in part_categories %}
+        <tr>
+            <td>{{ part_category.get_category_display }}</td>
+            <td>{{ part_category.price }} </td>
+            <td>{{ part_category.description }}</td>
         </tr>
     {% endfor %}
 </table>
