show home button on history page

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -30,7 +30,7 @@
         {% endif %}
     </div>
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      {% if transactions_list %}
+      {% if home %}
         <a href="/new" class="btn btn-default btn-xlarge" role="button" name='new_transaction'>
           <img class="buttonpic" src="/app/static/img/add.png" alt="New transaction"/>
         </a>
