--- a/app/templates/app/refurbished.html
+++ b/app/templates/app/refurbished.html
@@ -1,10 +1,9 @@
 {% extends "app/base.html" %}
 
 {% block content %}
-
+<center>
 <a href="{% url 'app:new_refurbished' %}" class="btn btn-default btn-xlarge" role="button" name='new_refurbished'>Add Refurbished Bike</a>
-<a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Back to Transactions</a>
-
+</center>
 {% if refurbished_list %}
     <h3>Refurbished Bikes</h3>
 
