Process multiple PartCategory ModelForms in Create_Transaction
Implementation:

create_trans_parts.js:
Duplicate the ModelForm fields rendered by the server

views.py:
In done(), make list of N dictionaries for each of N forms in Django's incoming MultiValueDict
In process(), save a PartCategory for each of these form dictionaries

--- a/app/templates/app/create_trans_parts.html
+++ b/app/templates/app/create_trans_parts.html
@@ -1,7 +1,11 @@
 {% extends "app/base.html" %}
 {% load bootstrap %}
+{% load staticfiles %}
+
 
 {% block head %}
+<script src="{% static 'js/create_trans_parts.js' %}" type="text/javascript" charset="utf-8" async defer>
+</script>
 {{ wizard.form.media }}
 {% endblock %}
 
