--- a/app/templates/app/create_trans_parts.html
+++ b/app/templates/app/create_trans_parts.html
@@ -25,7 +25,8 @@
         <div id="buttons"class="controls form-inline">
             <br>
             <input id="add_form" value="Add Category" class="btn btn-default btn-lg"/>
-            <input type="Submit" value="Submit" class="btn btn-default btn-lg"/>
+            <input type="submit" value="Submit" class="btn btn-default btn-lg"/>
+            <input type="submit" name="skip" value="Skip" class="btn btn-default btn-lg"/>
         </div>
     </form>
 {% endblock %}
