--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -1,66 +1,86 @@
 {% extends "app/base.html" %}
 {% load staticfiles %}
+{% load bootstrap %}
+{% load repairs_form %}
 
 {% block content %}
 
-<h2>Customer name: {{ transaction.first_name }} {{ transaction.last_name }}</h2>
+<h2><b>Customer name: {{ transaction.first_name }} {{ transaction.last_name }}<b/></h2>
 
-{% load repairs_form %}
+
 <table class="table table-striped">
+    <thead>
+        <td class="col-sm-1"></td>
+        <td class="col-sm-1"></td>
+    </thead>
     <tr>
-        <td>Email</td>
+        <td><b>Email</b></td>
         <td>{{ transaction.email }}</td>
     </tr>
     <tr>
-        <td>Affiliation</td>
+        <td><b>Affiliation</b></td>
         <td>{{ transaction.get_affiliation_display }}</td>
     </tr>
     <tr>
-        <td>Service Description</td>
+        <td><b>Service Description</b></td>
         <td>{{ transaction.service_description }} </td>
     </tr>
     <tr>
-        <td>Date Submitted</td>
+        <td><b>Date Submitted</b></td>
         <td>{{ transaction.date_submitted }}</td>
     </tr>
     <tr>
-        <td>Completed</td>
+        <td><b>Completed</b></td>
         <td>{{ transaction.completed }}</td>
     </tr>
     <tr>
-        <td>Price</td>
+        <td><b>Price</b></td>
         <td>{{ transaction.price }} </td>
     </tr>
     <tr>
-        <td>Amount Paid</td>
+        <td><b>Amount Paid</b></td>
         <td>{{ transaction.amount_paid }} </td>
     </tr>
-
     {% if transaction.rental_bike %}
     <tr>
-        <td>Rental VIN</td>
+        <td><b>Rental VIN</b></td>
         <td>{{ transaction.rental_bike.vin }} </td>
     </tr>
     {% elif transaction.refurbished_bike %}
     <tr>
-        <td>Refurbished VIN</td>
+        <td><b>Refurbished VIN</b></td>
         <td>{{ transaction.refurbished_bike.vin }} </td>
     </tr>
     {% endif %}
-    <tr>
-        <td><h4>Tasks:</h4></td>
-        <td></td>
-    </tr>
+    </table>
+    <br>
+    <h3><b>Categories:</b></h3>
+    <table class="table table-striped">
+        <thead>
+            <td class="col-sm-4"><b>Category<b/></td>
+            <td class="col-sm-2"><b>Price</b></td>
+            <td class="col-sm-2"><b>Description</b></td>
+        </thead>
+    {% for part_category in part_categories %}
+        <tr>
+            <td>{{ part_category.get_category_display }}</td>
+            <td> ${{ part_category.price }} </td>
+            <td>{{ part_category.description }}</td>
+        </tr>
+    {% endfor %}
+    </table>
+
+    <br>
+    <h3><b>Tasks:</b></h3>
+    <table class="table table-striped">
+        <thead>
+            <td class="col-sm-1"><b>Task</b></td>
+            <td class="col-sm-1"><b>Completion Status</b></td>
+        </thead>
     {% for task in tasks %}
         <tr>
             <td>{{ task.name|place_whitespace }} </td>
             <td>{{ task.completed }}</td>
-        </tr>
-    {% endfor %}
-    {% for part_category in part_categories %}
-        <tr>
-            <td>{{ part_category.get_category_display }} - ${{ part_category.price }}</td>
-            <td>{{ part_category.description }}</td>
         </tr>
     {% endfor %}
 </table>
