Edit PartCategory's at /edit
Implementation

views.py:
Refactored to use common code between create-transaction and edit when submitting PartCategoryForm's
Changed Transaction 'price' field to 'cost' so it would not conflict with 'price' in the PartCategoryForm's in the big-poppa edit form which includes both TransactionForm and the PartCategoryForm's.

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -34,8 +34,8 @@
         <td>{{ transaction.completed }}</td>
     </tr>
     <tr>
-        <td><b>Price</b></td>
-        <td>{{ transaction.price }} </td>
+        <td><b>Cost</b></td>
+        <td>{{ transaction.cost }} </td>
     </tr>
     <tr>
         <td><b>Amount Paid</b></td>
