--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -12,7 +12,7 @@
 
 {%  if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-{% load bootstrap_tags %}
+{% load bootstrap %}
 {% load repairs_form %}
 
 
@@ -20,7 +20,17 @@
 <form action="" method="post">
     {% csrf_token %}
 
-    {{ transaction_form | as_bootstrap}}
+    {{ transaction_form | bootstrap}}
+
+    {% for part_category_form in part_category_form_list %}
+        <div class="controls form-inline">
+            {% for field in part_category_form %}
+                {{ field | bootstrap}}
+            {% endfor %}
+            <input type="hidden" name="id" value="{{ part_category_form.instance.id }}">
+        </div>
+    {% endfor %}
+
     {% for category_pair in category_dict.iteritems %}
         <div id = {{category_pair.0|join_whitespace}} style="display:none">
             <h3>{{ category_pair.0 }}</h3>
@@ -28,14 +38,16 @@
     {% endfor %}
 
 
-    <div id="task-container" style="display:none">
+    <div id="task_container" style="display:none">
     {% for task in tasks %}
                     <div id="{{task.name|join_whitespace}}" category="{{ info_dict|get_member:task.name|get_member:'category'|join_whitespace }}">
                         <div class="fieldWrapper">
                             {% if not task.completed %}
-                            <em><strong>{{ task.name|place_whitespace }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
+                            <em><strong>{{ task.name|place_whitespace }}</strong></em>
+                            <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
                             {% else %}
-                            <em><strong>{{ task.name|place_whitespace }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
+                            <em><strong>{{ task.name|place_whitespace }}</strong></em>
+                            <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
                             {% endif %}
                         </div>
                     </div>
