--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -20,16 +20,37 @@
 <form action="" method="post">
     {% csrf_token %}
 
+    <h1>Customer Information</h1>
+
     {{ transaction_form | bootstrap}}
 
-    {% for part_category_form in part_category_form_list %}
-        <div class="controls form-inline">
-            {% for field in part_category_form %}
-                {{ field | bootstrap}}
-            {% endfor %}
-            <input type="hidden" name="id" value="{{ part_category_form.instance.id }}">
-        </div>
-    {% endfor %}
+
+    <h1>Parts</h1>
+
+    <div id="part_categories_container">
+        {% for part_category_form in part_category_form_list %}
+            {% with x=forloop.counter0 %}
+            <div class="controls form-inline" id={{x}}>
+                {% for field in part_category_form %}
+                    {% if field.name == 'was_used' %}
+                        {% if field.value == True %}
+                            <input class="form-control" id="was_used_show_{{x}}" type="checkbox" value="True" name="was_used" checked="checked">
+                        {% else %}
+                            <input class="form-control" id="was_used_show_{{x}}" type="checkbox" value="True" name="was_used">
+                        {% endif %}
+                        <input id="was_used_hidden_{{x}}" type="hidden" value="False" name="was_used">
+                    {% else %}
+                        {{ field | bootstrap}}
+                    {% endif %}
+                {% endfor %}
+                <input type="hidden" name="id" value="{{ part_category_form.instance.id }}">
+            </div>
+            {% endwith %}
+        {% endfor %}
+    </div>
+
+
+    <h1>Tasks</h1>
 
     {% for category_pair in category_dict.iteritems %}
         <div id = {{category_pair.0|join_whitespace}} style="display:none">
