--- a/app/templates/app/make_order.html
+++ b/app/templates/app/make_order.html
@@ -1,12 +1,13 @@
 {% extends "app/base.html" %}
 
 {% block content %}
-    {% load bootstrap %}
 
+    {% load bootstrap %}
     <form actions="." method="post">
         {% csrf_token %}
-        {{ form.amount|bootstrap }}
+        {{ form|bootstrap }}
         <input type="submit" value="Submit" class="btn btn-default btn-lg">
+        <a class="btn btn-default btn-lg" name="Cancel" role="button" href="{% url 'app:order' %}">Cancel</a>
     </form>
 
 {% endblock %}
