Added Orders and Installed Parts pages
Orders: can make new orders, view orders, and export as csv
Installed Parts: can view installed parts, and export as csv

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -16,7 +16,7 @@
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="/rental" class="btn btn-default btn-xlarge" role="button" name='rental'>Rental</a>
     <a href="/refurbished" class="btn btn-default btn-xlarge" role="button" name='refurbished'>Refurbished</a>
-    <a href="/order" class="btn btn-default btn-xlarge" role="button" name="order">Order</a>
+    <a href="/orders" class="btn btn-default btn-xlarge" role="button" name="orders">Orders</a>
 </div>
 {% if transactions_list %}
     <h3>Active Customers</h3>
