--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -4,6 +4,9 @@
 <script src="/app/static/js/edit.js"
         type="text/javascript"
         charset="utf-8" async defer></script>
+<script src="/app/static/js/checkbox.js"
+        type="text/javascript"
+        charset="utf-8" async defer></script>
 {% endblock %}
 
 
