Fixed create_transaction process() of MenuItems, Fixed id whitespace on /edit
views.py:
Changed TransactionWizard's done() and process() methods to use MenuItems.
Totally removed the use of info_dict and category_dict in TransactionWizard.
(INTERESTING! form_input_list[1] gets false for unchecked checkboxes by the
default Django processing. Seems like I should be able to refactor the
part_category checkboxes on /edit to use this rather than the hacky
javascript disabling-hidden-inputs thing that I am doing.)

edit.html:
Added |join_whitespace from the repairs_form.py template tag to fix
the id's which were invalid for tasks.
TODO: Change edit.html and views.py's update() to use MenuItems instead
of info_dict and category_dict. Then I can completely delete these
dicts from forms.py.

--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -64,17 +64,17 @@
 
     <div id="task_container" style="display:none">
     {% for task in tasks %}
-                    <div id="{{task.name|join_whitespace}}" category="{{ info_dict|get_member:task.name|get_member:'category'|join_whitespace }}">
-                        <div class="fieldWrapper">
-                            {% if not task.completed %}
-                            <em><strong>{{ task.name|place_whitespace }}</strong></em>
-                            <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
-                            {% else %}
-                            <em><strong>{{ task.name|place_whitespace }}</strong></em>
-                            <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
-                            {% endif %}
-                        </div>
-                    </div>
+            <div id="{{task.name|join_whitespace}}" category="{{ info_dict|get_member:task.name|get_member:'category'|join_whitespace }}">
+                <div class="fieldWrapper">
+                    {% if not task.completed %}
+                    <em><strong>{{ task.name|place_whitespace }}</strong></em>
+                    <input class="form-control" id="id_{{task.name| join_whitespace}}" name={{task.name| join_whitespace}} type="checkbox"/>
+                    {% else %}
+                    <em><strong>{{ task.name|place_whitespace }}</strong></em>
+                    <input class="form-control" id="id_{{task.name| join_whitespace}}" name={{task.name| join_whitespace}} checked="checked" type="checkbox"/>
+                    {% endif %}
+                </div>
+            </div>
     {% endfor %}
     </div>
 
