--- a/app/templates/app/confirm.html
+++ b/app/templates/app/confirm.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <body>
-You successfully added the transaction! <br><br>
+{{ text }}<br><br>
 <a href="/" class="btn btn-info btn-lg" role="button" name='back_to_list'>Back to list</a>
 </body>
 {% endblock %}
