--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -3,5 +3,7 @@
 {% block detail %}
 
 <a class="btn btn-default" href="{% url 'app:mark_completed' transaction.id %}" role="button">Mark as completed</a>
+<a class="btn btn-default" href="{% url 'app:assign_tasks' transaction.id %}" role="button">Assign Tasks</a>
+
 
 {% endblock %}
