Implemented /assign_tasks and /assign_parts

--- a/app/templates/app/confirm.html
+++ b/app/templates/app/confirm.html
@@ -3,6 +3,7 @@
 {% block content %}
 <body>
 {{ text }}<br><br>
-<a href="/" class="btn btn-info btn-lg" role="button" name='back_to_list'>Back to list</a>
+<a href="{{absolute_url}}" class="btn btn-info btn-lg" role="button" name='back_to_list'>Back</a>
+
 </body>
 {% endblock %}
