--- a/app/templates/app/assign_tasks.html
+++ b/app/templates/app/assign_tasks.html
@@ -20,16 +20,21 @@
                 </div>
             </div>
             <div class="{{ category_item_pair.0|join_whitespace }}" style="display:none">
-            {% for item in category_item_pair.1 %}
+            {% for item_and_bool in category_item_pair.1 %}
+                {% with item=item_and_bool.0 %}
+                    {% with bool=item_and_bool.1 %}
+                        <div class="fieldWrapper">
+                            <div class="form-group">
+                                <label class="control-label  " for="id_1-{{ item.name|join_whitespace }}">(${{ item.price }})  {{ item.name }}</label>
+                                <div class=" ">
 
-                <div class="fieldWrapper">
-                    <div class="form-group">
-                        <label class="control-label  " for="id_1-{{ item.name|join_whitespace }}">(${{ item.price }})  {{ item.name }}</label>
-                        <div class=" ">
-                            <input class="form-control" id="id_1-{{ item.name|join_whitespace }}" name="1-{{item.name|join_whitespace}}" type="checkbox" />
+                                    <input class="form-control" id="id_1-{{ item.name|join_whitespace }}" name="1-{{item.name|join_whitespace}}" type="checkbox"
+                                           {% if bool %} checked="checked "{% endif %}/>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
+                    {% endwith %}
+                {% endwith %}
             {% endfor %}
             </div>
     {% endfor %}
@@ -45,6 +50,7 @@
 
     </table>
 
-    <input type="submit" value='{% trans "submit" %}' class="btn btn-default btn-lg"/>
+    <input type="submit" value='{% trans "Submit" %}' class="btn btn-default btn-lg"/>
+    <input type="submit" value='{% trans "Cancel" %}' name="cancel" class="btn btn-default btn-lg"/>
 </form>
 {% endblock %}
