--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -3,7 +3,8 @@
 {% block detail %}
 
 <a class="btn btn-default" href="{% url 'app:mark_completed' transaction.id %}" role="button">Mark as completed</a>
-<a class="btn btn-default" href="{% url 'app:assign_tasks' transaction.id %}" role="button">Assign Tasks</a>
+<a class="btn btn-default" href="{% url 'app:assign_tasks' transaction.id parent_url %}" role="button">Assign Tasks</a>
+<a class="btn btn-default" href="{% url 'app:assign_parts' transaction.id parent_url %}" role="button">Assign Parts</a>
 
 
 {% endblock %}
